[gd_scene load_steps=6 format=2]

[ext_resource path="res://tictactoe.gd" type="Script" id=1]
[ext_resource path="res://x-removebg-preview.png" type="Texture" id=2]

[sub_resource type="VisualShader" id=4]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 4 )

[sub_resource type="SphereMesh" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 0, -56 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="circle1" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 576, 320 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle2" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 960, 320 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle3" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 1344, 320 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle4" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 560, 704 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle5" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 960, 704 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle6" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 1360, 720 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle7" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 560, 1088 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle8" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 960, 1088 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle9" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 1360, 1088 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="linev1" type="Line2D" parent="."]
position = Vector2( 1152, 176 )
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="linev2" type="Line2D" parent="."]
position = Vector2( 752, 176 )
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="lineh1" type="Line2D" parent="."]
position = Vector2( 432, 512 )
rotation = -1.5708
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="lineh2" type="Line2D" parent="."]
position = Vector2( 432, 912 )
rotation = -1.5708
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="square1" type="Button" parent="."]
margin_left = 400.0
margin_top = 112.0
margin_right = 412.0
margin_bottom = 132.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square2" type="Button" parent="."]
margin_left = 784.0
margin_top = 112.0
margin_right = 796.0
margin_bottom = 132.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square3" type="Button" parent="."]
margin_left = 1184.0
margin_top = 112.0
margin_right = 1196.0
margin_bottom = 132.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square4" type="Button" parent="."]
margin_left = 384.0
margin_top = 512.0
margin_right = 396.0
margin_bottom = 532.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square5" type="Button" parent="."]
margin_left = 784.0
margin_top = 512.0
margin_right = 796.0
margin_bottom = 532.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square6" type="Button" parent="."]
margin_left = 1184.0
margin_top = 512.0
margin_right = 1196.0
margin_bottom = 532.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square7" type="Button" parent="."]
margin_left = 384.0
margin_top = 928.0
margin_right = 396.0
margin_bottom = 948.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square8" type="Button" parent="."]
margin_left = 784.0
margin_top = 928.0
margin_right = 796.0
margin_bottom = 948.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square9" type="Button" parent="."]
margin_left = 1168.0
margin_top = 912.0
margin_right = 1180.0
margin_bottom = 932.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="x1" type="Sprite" parent="."]
visible = false
position = Vector2( 576, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x2" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x3" type="Sprite" parent="."]
visible = false
position = Vector2( 1360, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x4" type="Sprite" parent="."]
visible = false
position = Vector2( 560, 704 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x5" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 704 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x6" type="Sprite" parent="."]
visible = false
position = Vector2( 1360, 704 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x7" type="Sprite" parent="."]
visible = false
position = Vector2( 576, 1088 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x8" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 1088 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="x9" type="Sprite" parent="."]
visible = false
position = Vector2( 1360, 1088 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="winner" type="Label" parent="."]
visible = false
margin_left = 112.0
margin_top = 528.0
margin_right = 182.0
margin_bottom = 542.0
rect_scale = Vector2( 25, 25 )
align = 1
valign = 1
autowrap = true
max_lines_visible = 915

[node name="restart" type="Button" parent="."]
visible = false
margin_left = 1872.0
margin_top = 112.0
margin_right = 1933.0
margin_bottom = 132.0
rect_scale = Vector2( 3, 3 )
text = "AGAIN?"
flat = true

[node name="back to menu" type="Button" parent="."]
visible = false
margin_left = 16.0
margin_top = 112.0
margin_right = 115.0
margin_bottom = 160.0
rect_min_size = Vector2( 3, 3 )
rect_scale = Vector2( 3, 3 )
text = "back to menu"
flat = true

[connection signal="pressed" from="square1" to="." method="_on_square1_pressed"]
[connection signal="pressed" from="square2" to="." method="_on_square2_pressed"]
[connection signal="pressed" from="square3" to="." method="_on_square3_pressed"]
[connection signal="pressed" from="square4" to="." method="_on_square4_pressed"]
[connection signal="pressed" from="square5" to="." method="_on_square5_pressed"]
[connection signal="pressed" from="square6" to="." method="_on_square6_pressed"]
[connection signal="pressed" from="square7" to="." method="_on_square7_pressed"]
[connection signal="pressed" from="square8" to="." method="_on_square8_pressed"]
[connection signal="pressed" from="square9" to="." method="_on_square9_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="back to menu" to="." method="_on_back_to_menu_pressed"]
